[gd_scene load_steps=4 format=3 uid="uid://cbl30lkyw3ri4"]

[ext_resource type="Script" path="res://Scripts/BrickBreaker/ui.gd" id="1_h11vc"]
[ext_resource type="FontFile" uid="uid://cx8t7dylchigh" path="res://Assets/SuperMario256.ttf" id="2_h11vc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h11vc"]
bg_color = Color(0.236054, 0.570641, 0.59763, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_h11vc")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VidasLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h11vc")
theme_override_font_sizes/font_size = 25
text = "Vidas: 3"

[node name="juegoPerdidoConteiner" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="juegoPerdidoConteiner"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h11vc")

[node name="VBoxContainer" type="VBoxContainer" parent="juegoPerdidoConteiner/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="juegoPerdidoConteiner/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_h11vc")
theme_override_font_sizes/font_size = 25
text = "Has Perdido"

[node name="botonPerdiste" type="Button" parent="juegoPerdidoConteiner/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h11vc")
text = "Restart"

[node name="botonNextNivel2" type="Button" parent="juegoPerdidoConteiner/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h11vc")
text = "Volver al menu"

[node name="JuegoGanadorConteiner" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="JuegoGanadorConteiner"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h11vc")

[node name="VBoxContainer" type="VBoxContainer" parent="JuegoGanadorConteiner/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="JuegoGanadorConteiner/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_h11vc")
theme_override_font_sizes/font_size = 25
text = "Has Ganado"

[node name="botonNextNivel" type="Button" parent="JuegoGanadorConteiner/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h11vc")
text = "Siguiente Nivel"

[node name="NivelAleatorio" type="Button" parent="JuegoGanadorConteiner/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h11vc")
text = "Jugar autoGenerado"

[node name="botonNextNivel2" type="Button" parent="JuegoGanadorConteiner/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h11vc")
text = "Volver al menu"

[connection signal="pressed" from="juegoPerdidoConteiner/Panel/VBoxContainer/botonPerdiste" to="." method="_on_boton_perdiste_pressed"]
[connection signal="pressed" from="juegoPerdidoConteiner/Panel/VBoxContainer/botonNextNivel2" to="." method="_on_boton_next_nivel_2_pressed"]
[connection signal="pressed" from="JuegoGanadorConteiner/Panel/VBoxContainer/botonNextNivel" to="." method="_on_boton_next_nivel_pressed"]
[connection signal="pressed" from="JuegoGanadorConteiner/Panel/VBoxContainer/NivelAleatorio" to="." method="_on_nivel_aleatorio_pressed"]
[connection signal="pressed" from="JuegoGanadorConteiner/Panel/VBoxContainer/botonNextNivel2" to="." method="_on_boton_next_nivel_2_pressed"]
